<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="#F6F6F9"
    tools:context=".FoodDetailActivity">

    <ImageView
        android:id="@+id/food_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_food_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/food_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_food_fav"
        app:layout_constraintBottom_toBottomOf="@+id/food_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/food_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_fav">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/food_img_1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/food_name"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/food_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/food_price"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/food_name"
        app:layout_constraintTop_toBottomOf="@+id/food_name" />

    <TextView
        android:id="@+id/delivery_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/delivery_info"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_price" />

    <TextView
        android:id="@+id/delivery_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/food_delivery_desc"
        android:textColor="#B3000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/delivery_info"
        app:layout_constraintTop_toBottomOf="@+id/delivery_info" />

    <TextView
        android:id="@+id/return_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/return_policy"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/delivery_info_txt"
        app:layout_constraintTop_toBottomOf="@+id/delivery_info_txt" />

    <TextView
        android:id="@+id/return_policy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/return_policy_txt"
        android:textColor="#B3000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/return_policy"
        app:layout_constraintTop_toBottomOf="@+id/return_policy" />

    <TextView
        android:id="@+id/food_order"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_background"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/order_now"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/return_policy_txt"
        app:layout_constraintStart_toStartOf="@+id/return_policy_txt"
        app:layout_constraintTop_toBottomOf="@+id/return_policy_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>